Update render.yaml with NODE_ENV production setting

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: AbdifatahIbrahim
+    name: portfolio-backend
     env: node
     buildCommand: npm install && npm run build
     startCommand: npm start
