--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^22.14.1",
     "typescript": "^5.3.3"
   }
 }
